nenolod     2007/01/14 08:34:12 UTC	(20070114-7487)
  Log:
  - make object ref/unref use void * + internal cast (to avoid spurious warnings)
  - use char instead of const char for the object's name
  - make dictionary.c use object_t, but don't make use of the refcounting (mainly for style)
  

  Changes:	Modified:
  +4 -3		trunk/include/object.h (File Modified) 
  +6 -4		trunk/src/dictionary.c (File Modified) 
  +11 -8	trunk/src/object.c (File Modified) 


nenolod     2007/01/14 08:24:01 UTC	(20070114-7485)
  Log:
  - change object_ref() to return a pointer to the ref'd object.
  

  Changes:	Modified:
  +1 -1		trunk/include/object.h (File Modified) 
  +3 -1		trunk/src/object.c (File Modified) 


nenolod     2007/01/14 08:22:28 UTC	(20070114-7483)
  Log:
  - add object(x) macro for safely casting to a base object
  

  Changes:	Modified:
  +2 -0		trunk/include/object.h (File Modified) 


nenolod     2007/01/14 08:19:09 UTC	(20070114-7481)
  Log:
  - object manager
  - fancy new assertion macros: soft_assert(), return_if_fail(), return_val_if_fail().
  

  Changes:	Modified:
  +68 -0	trunk/include/atheme.h (File Modified) 
  +24 -0	trunk/include/object.h (File Added) 
  +1 -0		trunk/src/Makefile.in (File Modified) 
  +87 -0	trunk/src/object.c (File Added) 


nenolod     2007/01/14 04:14:47 UTC	(20070114-7479)
  Log:
  - update toplevel Makefile
  

  Changes:	Modified:
  +1 -1		trunk/Makefile.in (File Modified) 


nenolod     2007/01/14 03:58:28 UTC	(20070114-7477)
  Log:
  - safe signals implementation based on the one i did in audacious
  

  Changes:	Modified:
  +2 -0		trunk/include/internal.h (File Modified) 
  +2 -27	trunk/src/atheme.c (File Modified) 
  +98 -43	trunk/src/signal.c (File Modified) 


nenolod     2007/01/14 03:37:48 UTC	(20070114-7475)
  Log:
  - run autoconf for r7473
  

  Changes:	Modified:
  +6 -6		trunk/configure (File Modified) 


nenolod     2007/01/14 03:37:24 UTC	(20070114-7473)
  Log:
  - crypto/backend/protocol -> modules